force-app/main/default/objects/StudentGroup__c/StudentGroup__c.object-meta.xml
<CustomObject>
    <description>A group of students studying the same speciality in the same academic year</description>
    <label>Student Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>