force-app/main/default/objects/StudentGroup__c/fields/ActiveMembers__c.field-meta.xml
<CustomField>
    <fullName>ActiveMembers__c</fullName>
    <inlineHelpText>Number of active members in the group</inlineHelpText>
    <label>Active Students</label>
    <summaryFilterItems>
        <field>StudentGroupMember__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>StudentGroupMember__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>