force-app/main/default/objects/StudentGroup__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Student Groups</relationshipLabel>
    <relationshipName>StudentGroups</relationshipName>
    <type>Lookup</type>
</CustomField>