force-app/main/default/objects/StudentGroup__c/fields/GroupCourator__c.field-meta.xml
<CustomField>
    <fullName>GroupCourator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Active Professor of Group&apos;s Department</inlineHelpText>
    <label>Group Courator</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Courating Groups</relationshipLabel>
    <relationshipName>CouratingGroups</relationshipName>
    <type>Lookup</type>
</CustomField>