force-app/main/default/objects/StudentGroup__c/fields/HeadOfGroup__c.field-meta.xml
<CustomField>
    <fullName>HeadOfGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Group</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Heading Groups</relationshipLabel>
    <relationshipName>StudentGroups</relationshipName>
    <type>Lookup</type>
</CustomField>