force-app/main/default/objects/StudentGroup__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Group</label>
    <type>Checkbox</type>
</CustomField>